[package]
name = "social-fetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.7", features = ["blocking"] }
select = "0.5.0"
clap = { version = "3.0", features = ["derive"] }
ansi_term = "*"
chrono = "*"