[package]
name = "social"
version = "0.1.0"
authors = ["Francisco Salgueiro <fgcdbs@gmail.com>"]
description = "Command line tool to fetch the menu of the IST Alameda canteen"
homepage = "https://github.com/franciscoBSalgueiro/social"
repository = "https://github.com/franciscoBSalgueiro/social"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.7", features = ["blocking"] }
select = "0.5.0"
clap = { version = "3.0", features = ["derive"] }
ansi_term = "0.12.1"
chrono = "0.4.19"